# acdcpf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  compare_results.py  pyproject.toml  run_case33_ieee.py  test_final.py
.claude/: settings.local.json
MatACDC/: compare_results.m  run_case33_ieee.m  run_validation_cases.m  runacdcpf.m
MatACDC/results/: case33_ieee_results.mat  res_ac_bus.csv  res_dc_bus.csv  res_dc_line.csv  res_vsc.csv
MatACDC/validation_results/: case24_ieee_rts_mtdc.json  case5_stagg_hvdc_ptp.json  case5_stagg_mtdc_droop.json  case5_stagg_mtdc_slack.json
acdcpf/: __init__.py  network.py
acdcpf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
acdcpf/create/: __init__.py  ac.py  converters.py  dc.py
acdcpf/io/: __init__.py  matacdc.py  pypower.py
acdcpf/networks/: __init__.py  case24_ieee_rts_mtdc.py  case33_ieee.py  case33_ieee_ext.py  case33h_ieee_AC.py  case33h_ieee_DC.py  case5_stagg_hvdc_ptp.py  case5_stagg_mtdc_droop.py  case5_stagg_mtdc_slack.py  cigre_b4.py  simple.py
acdcpf/powerflow/: __init__.py  ac.py  dc.py  runpf.py
acdcpf/results/: __init__.py  export.py  process.py
acdcpf/results/case33_ieee/: res_ac_bus.csv  res_ac_line.csv  res_dc_bus.csv  res_dc_line.csv  res_vsc.csv  results.json
docs/: users_manual.mdx
examples/: build_network.py  existing_network.py
matpower8.0/matpower8.0/data/: case5.m
matpower8.0/matpower8.0/docs/relnotes/: MATPOWER-Announce-8.0b1.md  MATPOWER-Release-Notes-8.0b1.md
matpower8.0/matpower8.0/docs/sphinx/source/dev-manual/figures/src/mp-element-ac-model.graffle/: data.plist
matpower8.0/matpower8.0/docs/sphinx/source/matlab-source/matpower/: cpf_vlim_event.m
matpower8.0/matpower8.0/lib/: cpf_flim_event.m  cpf_flim_event_cb.m  cpf_vlim_event_cb.m
tests/: __init__.py  matacdc_reference.py  test_case33_ieee_ext.py  test_matacdc_validation.py
tests/matacdc_reference_data/: case5_stagg_hvdc_ptp.json  case5_stagg_mtdc_droop.json  case5_stagg_mtdc_slack.json
