[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acdcpf"
version = "0.1.0"
description = "Hybrid AC/DC Power Flow Library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ACDCPF Contributors"}
]
keywords = ["power flow", "HVDC", "VSC", "power systems", "AC/DC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "pypower>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/slazar394/acdcpf"
Repository = "https://github.com/slazar394/acdcpf"
Issues = "https://github.com/slazar394/acdcpf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["acdcpf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"